Fixed width issue in IOS(iPhone4) Chrome
- Search bar was just slightly too wide in IOS chrome (on iphone4)
  so I changed it to 40% instead of 50% width (with a max-width still
  defined) and that fixed the issue.

--- a/assets/www/css/main.css
+++ b/assets/www/css/main.css
@@ -41,7 +41,7 @@ input[type="checkbox"] {
 }
 
 .search_box {
-    width:50%;
+    width:40%;
     max-width:350px;
     height:22px;
     font-size:16px;
